--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	font-family: 'Montserrat', sans-serif;
   }
 body {
-	background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%);
+	background: linear-gradient(to bottom right, #0700b8 0%, #00ff88 100%);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
